k8s/router-service.yml
kind: Service
apiVersion: v1
metadata:
  name: router-service
spec:
  selector:
    app: router
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
