k8s/ingress.yml
# k8s/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: codespace-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api/sandbox
            pathType: Prefix

            backend:
              service:
                name: sandbox-service

                port:
                  number: 80
